<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dataAnak"
        style="@style/TextContent.Black"
        android:textSize="32sp"
        android:text="@string/data_anak"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/gender"
        style="@style/TextContent"
        android:textSize="20sp"
        android:text="@string/jenis_kelamin"
        android:layout_below="@id/dataAnak"/>

    <Spinner android:id="@+id/spinner1"
        android:layout_toRightOf="@id/gender"
        android:layout_alignBottom="@id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/Spinner_gender"/>

    <TextView
        android:id="@+id/umur"
        style="@style/TextContent"
        android:textSize="20sp"
        android:layout_below="@id/gender"
        android:text="@string/kategori_umur"/>

    <Spinner android:id="@+id/spinner2"
        android:layout_toRightOf="@id/umur"
        android:layout_alignBottom="@id/umur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/Spinner_umur"/>

    <Button
        android:id="@+id/buttonNext"
        style="@style/ButtonGeneral"
        android:text="@string/simpan"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>