<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    tools:context=".CategoryActivity">

    <TextView
        android:id="@+id/kategori_usia"
        style="@style/TextContent.Black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/pilih_kategori_usia"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/batita_card"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_width="340dp"
        android:layout_height="180dp"
        android:layout_margin="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_batita"
                android:padding="2dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="2dp"
                android:text="@string/batita"
                android:padding="1dp"
                android:textSize="30sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"
                android:layout_margin="2dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/usia_kurang_dari_3_tahun"
                android:textSize="18sp"
                android:padding="3dp"
                android:textColor="@android:color/darker_gray"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/balita_card"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:padding="15dp"
        android:layout_width="340dp"
        android:layout_height="180dp"
        android:layout_margin="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_balita"
                android:padding="2dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="2dp"
                android:text="@string/balita"
                android:padding="1dp"
                android:textSize="30sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"
                android:layout_margin="2dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/usia_kurang_dari_5_tahun"
                android:textSize="18sp"
                android:padding="3dp"
                android:textColor="@android:color/darker_gray"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>