<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BalitaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/balita"
                style="@style/TextContent.Black"
                android:textSize="32sp"
                android:textStyle="bold"
                android:text="@string/balita"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/lightgray"
                android:layout_margin="2dp"/>
            <TextView
                android:id="@+id/edible_colouring"
                style="@style/TextContent.Subtitle"
                android:text="1. Plastisin"
                android:textSize="28sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/plastisin"
                android:padding="16dp"
                android:adjustViewBounds="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/TextContent"
                android:text="@string/paragraf_plastisin"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/lightgray"
                android:layout_margin="8dp"/>
            <TextView
                android:id="@+id/hula_hoop"
                style="@style/TextContent.Subtitle"
                android:text="@string/_2_slime"
                android:textSize="28sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/slime"
                android:padding="16dp"
                android:adjustViewBounds="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/TextContent"
                android:text="@string/paragraf_slime"
                android:textSize="16sp"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/lightgray"
                android:layout_margin="8dp"/>

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_balita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"

                app:videoId="9EtqB69d4-A"
                app:autoPlay="false"
                app:showYouTubeButton="true"
                app:showFullScreenButton="false"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>